title spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -20,4 +20,5 @@ body {
     font-size: 18px;
     letter-spacing: 15px;
     margin-bottom: 30px;
+    margin-right: -15px;
 }
